# monitor_app

./: .env.example  .gitignore  CLAUDE.md  README.md  requirements.txt  start.sh  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml
api/: index.py
backend/: config.py  main.py  pyproject.toml
backend/api/: vision.py
backend/models/: schemas.py
backend/services/: claude_service.py  db_service.py  image_service.py  monitor_skills.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  camera.js  manual.js  patients.js  trend.js
